commit the changes

--- a/USESCASE/MAGIC_COMMAND.ipynb
+++ b/USESCASE/MAGIC_COMMAND.ipynb
@@ -81,7 +81,7 @@
     }
    },
    "source": [
-    "##FRIST USE CASE - CREATE VOLUMN\n"
+    "##FRIST USE CASE - CREATE VOLUME\n"
    ]
   },
   {
@@ -106,6 +106,117 @@
     "%sql\n",
     "CREATE VOLUME IF NOT EXISTS workspace.default.usage_metrics;"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "579f6055-1fbb-4220-be06-769d62d6fb7d",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "Call the notebook 4_child_nb_dataload using the magic command %run"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "0fd2d1cc-f24f-4459-810c-01d7902e71c4",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%run \"/Workspace/Users/jakkamswarna@gmail.com/databricks-test-repo/child_nb_dataload\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "eb544ee3-42f5-497c-a6ad-5200c62c3999",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "list the file is created in the given volume or not and do the head of this file using fs magic command %fs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "132420de-464a-4f2b-af45-17fd27a3d156",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%fs ls \"dbfs:///Volumes/workspace/default/usage_metrics/mobile_os_usage.csv\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "70029110-7e47-4ae1-b5c2-015ea49f46b3",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    " %fs head /Volumes/workspace/default/usage_metrics/mobile_os_usage.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "968cb2bd-9d05-44cd-85c3-3a0a7a39a86a",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -152,7 +263,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 4514881114498841,
+     "commandId": 4514881114498852,
      "dataframes": [
       "_sqldf"
      ]
