commit the change

--- a/Spark_DataFrame_Read_Write_Operations/Basic-WriteOps.ipynb
+++ b/Spark_DataFrame_Read_Write_Operations/Basic-WriteOps.ipynb
@@ -59,6 +59,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "376a1083-6a65-4755-993c-3f74e5df9847",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "#Extracting the data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -80,6 +96,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "ec77b3a6-dbd8-4488-a097-a8a901b528cf",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "#Loading the data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -98,7 +130,24 @@
    "outputs": [],
    "source": [
     "ingest_df1.write.csv(path=\"/Volumes/workspace/ingestion_volume/target/csvout\",sep='~',header=True,mode='overwrite')\n",
+    "spark.read.csv(\"/Volumes/workspace/ingestion_volume/target/csvout\").show(2)\n",
     "     "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "8ed2aea6-680f-4688-82ca-875c0aa56a4c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "#Transforming the data"
    ]
   },
   {
@@ -106,7 +155,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "d081e87c-5f93-4485-bac5-782efccdb945",
      "showTitle": false,
@@ -115,7 +167,190 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "transformed_df=ingest_df1.select(\"custid\",\"fname\",\"lname\",\"profession\",\"age\").withColumnRenamed(\"profession\",\"prof\")\n",
+    "\n",
+    "     "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "273d5048-5f73-4aea-aad1-7a82d5656cb3",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "transformed_df.write.csv(path=\"/Volumes/workspace/ingestion_volume/target/csvout\",sep='~',header=True,mode='overwrite')\n",
+    "#compressed data\n",
+    "transformed_df.write.csv(path=\"/Volumes/workspace/ingestion_volume/target/csvout\",sep='~',header=True,mode='overwrite',compression='gzip')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "d99aa09a-418e-4a51-a5ec-7405a30a82b8",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "#Json format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "59838b5d-5463-44e1-b4cc-a2f314842004",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "ingest_df1.write.json(path=\"/Volumes/workspace/ingestion_volume/target/jsonout\",mode='overwrite')\n",
+    "spark.read.json(\"/Volumes/workspace/ingestion_volume/target/jsonout\").show(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "3ac0b212-e0e4-4a3b-b778-f2119a9009a4",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "#Serialization (encoding in a more optimized fashion) <br/>Deserialization File formats (Binary/Brainy File formats)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "1e7e4d7b-9555-4813-8b07-204f268b8129",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "ingest_df1.write.orc(path=\"/Volumes/workspace/ingestion_volume/target/orcout\",mode='overwrite',compression='zlib')#by default orc/parquet uses snappy compression\n",
+    "spark.read.orc(\"/Volumes/workspace/ingestion_volume/target/orcout\").show(2)#uncompression + deserialization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "78c6f6a8-e39c-48c8-afb0-037e0537344c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "#Orc/Parquet follows WORM feature (Write Once Read Many)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "82593fd8-8db7-4812-8c69-595a5d8cea39",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "ingest_df1.write.mode(\"overwrite\").option(\"compression\",\"snappy\").parquet(path=\"/Volumes/workspace/ingestion_volume/target/parquetout\")#by default orc/parquet uses snappy compression\n",
+    "spark.read.parquet(\"/Volumes/workspace/ingestion_volume/target/parquetout\").show(2)#uncompression + deserialization\n",
+    "     "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "e6a6ba0f-4cab-44a5-9d23-f6f728494fe5",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "#Delta follows WMRM feature (Write Many Read Many)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "e5157d6f-94b1-4bfa-ad02-ccc8ba2ab526",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "ingest_df1.write.format(\"delta\").save(\"/Volumes/workspace/ingestion_volume/target/deltaout\",mode='overwrite')\n",
+    "spark.read.format(\"delta\").load(\"/Volumes/workspace/ingestion_volume/target/deltaout\").show(2)"
+   ]
   }
  ],
  "metadata": {
